# worts

./: .gitignore  .html  README.md  meson.build  nim.cfg  nworts.nimble  nworts.nims  vimba  worts.psd1  worts.psm1
GDAL/: wort.ps1
ODB/: wort.compiler.binary.ps1  wort.runtime.source.ps1
SOCI/: wort.ps1
aria2/: wort.binary.ps1  wort.binary.win32.ps1  wort.ps1  wort.source.linux.ps1  wort.source.ps1
assimp/: wort.ps1
boost/: wort.ps1
caffe/: wort.ps1
cmake/: wort.ps1
doc/: cmdline.md  overview.md  overview.rst  package-description.md  ports.md  ports.rst  worts-folders.md  worts-folders.rst
eigen/: wort.ps1
freexl/: wort.ps1
geos/: wort.ps1
glbinding/: wort.ps1
lib/: types.psm1
libodb/: wort.runtime.source.ps1
libodb-sqlite/: wort.ps1
libtiff/: wort.ps1
ninja/: wort.binary.win32.ps1
opencv/: wort.ps1
pkgs/: example_package.ps1  example_package.psm1  zlib.ps1  zlib.psm1
ponder/: wort.ps1
proj4/: wort.ps1
sqlite3/: wort.ps1
src/: nworts.nim
src/nworts/: commands.nim  defaults.nim  inipkg.nim  linking.nim  pkgdb.nim  pkgenv.nim  pkgexcept.nim  pkgfmt.nim  pkgiface.nim  pkginit.nim  pkgio.nim  pkglayout.nim  pkgopts.nim  pkgtasks.nim  pkgtypes.nim  pkgvers.nim  utils.nim
src/private/: defaults.nim  pkgtasks.nim  pkgtypes.nim
src/tools/: dumpmeta.nim  lspkgs.nim  meson.build  nenv.nim  nstow.nim
test/: worts.Tests.ps1
tests/: tstcommands.nim  tstpkgopts.nim
tst/: tstpkgopts.nim
worts/: all.nim  wortenv  wortenv.nim
worts/GLib/: GLib.nim
worts/sqlite3/: CMakeLists.txt  sqlite3.nim
zlib/: wort.ps1
(+28 files in other folders)
